--- a/dvc.yaml
+++ b/dvc.yaml
@@ -17,6 +17,8 @@ stages:
       - target_col
       - one_hot_drop
       - auto_class_weights
+      - C
+      - penalty
     outs:
       - models/fitted_model.pkl
   evaluate_model:
